Speed Reader v1.2 | fixed page style on mobile + font

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: cursive;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
   border: none;
   outline: none;
   color: snow;
@@ -14,7 +15,7 @@
 
 body {
   background-color: #1b1b1b;
-  font-size: 2em;
+  font-size: min(2.3em, 5vw);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,7 +29,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 0.5em;
-  width: max(35vw, 720px);
+  width: min(35vw, 720px);
 }
 
 .optionsSection {
@@ -36,7 +37,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 0.5em;
-  width: max(35vw, 720px);
+  width: min(35vw, 720px);
 }
 .optionsSection h4 {
   font-size: 0.6em;
@@ -47,7 +48,6 @@ input, textarea{
   padding: 0.5em 1em;
   size: 6;
   font-size: 0.75em;
-  /* width: 20%; */
   background-color: transparent;
   border-bottom: 6px solid var(--grayColor);
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
@@ -67,8 +67,8 @@ textarea::-webkit-scrollbar {
 }
 
 #textInput {
-  width: max(35vw, 720px);
-  height: max(25vw, 600px);
+  width: min(90vw, 720px);
+  aspect-ratio: 1.2;
   border-radius: 1em;
   border: 6px solid var(--grayColor);
   resize: none;
@@ -79,9 +79,9 @@ textarea::-webkit-scrollbar {
 }
 
 button {
-  width: 9vw;
+  width: min(150px, 21vw);
+  height: min(50px, 7vw);
   font-size: 0.5em;
-  height: 3vw;
   border-radius: 1em;
   background-color: var(--grayColor);
   cursor: pointer;
